Further work on assessment and fixed growth tables

--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Concordia</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -300,7 +301,7 @@
       <td style = "text-align: right;">-52</td>
       <td style = "text-align: right;">3,606</td>
       <td style = "text-align: right;">27,608</td>
-      <td style = "text-align: right;">31,214</td>
+      <td style = "text-align: right;">31,162</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Maine</td>
       <td style = "text-align: right;">11,617</td>
@@ -308,7 +309,7 @@
       <td style = "text-align: right;">-5,747</td>
       <td style = "text-align: right;">10,862</td>
       <td style = "text-align: right;">4,665</td>
-      <td style = "text-align: right;">15,527</td>
+      <td style = "text-align: right;">9,780</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Massachusetts</td>
       <td style = "text-align: right;">67,113</td>
@@ -316,7 +317,7 @@
       <td style = "text-align: right;">3,747</td>
       <td style = "text-align: right;">-39,513</td>
       <td style = "text-align: right;">69,332</td>
-      <td style = "text-align: right;">29,819</td>
+      <td style = "text-align: right;">33,566</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">New Hampshire</td>
       <td style = "text-align: right;">11,929</td>
@@ -324,7 +325,7 @@
       <td style = "text-align: right;">-2,586</td>
       <td style = "text-align: right;">-7,058</td>
       <td style = "text-align: right;">5,071</td>
-      <td style = "text-align: right;">-1,987</td>
+      <td style = "text-align: right;">-4,573</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Rhode Island</td>
       <td style = "text-align: right;">9,801</td>
@@ -332,7 +333,7 @@
       <td style = "text-align: right;">-903</td>
       <td style = "text-align: right;">183</td>
       <td style = "text-align: right;">8,502</td>
-      <td style = "text-align: right;">8,685</td>
+      <td style = "text-align: right;">7,782</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Vermont</td>
       <td style = "text-align: right;">5,058</td>
@@ -340,7 +341,7 @@
       <td style = "text-align: right;">-1,913</td>
       <td style = "text-align: right;">7,592</td>
       <td style = "text-align: right;">2,152</td>
-      <td style = "text-align: right;">9,744</td>
+      <td style = "text-align: right;">7,831</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">140,049</td>
@@ -348,7 +349,7 @@
       <td style = "font-weight: bold; text-align: right;">-7,454</td>
       <td style = "font-weight: bold; text-align: right;">-24,328</td>
       <td style = "font-weight: bold; text-align: right;">117,330</td>
-      <td style = "font-weight: bold; text-align: right;">93,002</td>
+      <td style = "font-weight: bold; text-align: right;">85,548</td>
     </tr>
   </tbody>
 </table>
@@ -595,13 +596,27 @@
 <p>Politcal polarization of Concordia, as measured by the margin between votes for the two major party political nominees, was 18.42% in the 2024 election. Politcal polarization of Concordia, as measured by the margin between votes for the two major party political nominees, was 11.27% over the elections from 1968-2020.</p>	 
  Even should the recent marked difference between the two parties should revert to the long-term mean, there appears to be a stable political majority for Concordia.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<h3 id="demographics"><a href="#demographics" class="header-anchor">Demographics</a></h3>
+<p>Concordia has a slight demographic advantage over other nations due to its absorption of immigrants. Maine and Vermont, however, have aging populations and limited occupational opportunities for immigrants</p>
+<h3 id="economics"><a href="#economics" class="header-anchor">Economics</a></h3>
 <p>Assuming that US markets remain open to Concordia, it would be a viable standalone nation if it continues to absorb foreign immigration and can meet challenges in housing costs.</p>
+<h3 id="diversity"><a href="#diversity" class="header-anchor">Diversity</a></h3>
+<p>Concordia has diverse landscapes—coastal, mountains and valleys. </p>
+<h3 id="climate_change"><a href="#climate_change" class="header-anchor">Climate change</a></h3>
+<div class="marginnote"><a href="https://forestadaptation.org/sites/default/files/2019-06/New-England-Northern-New-York-Climate-Impacts.pdf">Climate Impacts – New England and Northern New York</a></div>
+<p>The concentration of population in coastal areas makes Concordia vulnerable to sea level rise, which may reach 23 inches by the end of the century. In conjunction with increased storm activity, investments in urban runoff control will be required. Foresty impacts will slowly develop as existing species mixes give way to species better adapted to warmer, drier climates. Meterological winter will be shorter and drier. Natural landscape adaptation to changed conditions will require decades and the human landscape will also take time to adjust. Most of Concordia&#39;s economy is not directly vulnerable to climate change.                          </p>
+<h3 id="economics__2"><a href="#economics__2" class="header-anchor">Economics</a></h3>
+<p>Concordia has low dependence on natural resources, and its economy won&#39;t be directly affect by depletion of such commodities as oil and minerals. Concordia&#39;s knowledge based economy will continue to rely on investment in primary and secondary education.</p>
+<h3 id="geopolitics"><a href="#geopolitics" class="header-anchor">Geopolitics</a></h3>
+<p>Concordia can be expected to cultivate friendly relations with Canada to its north and Metropolis to its west. It has no obvious reasons to come into conflict with China, as it emerges as the global hemegon. It will continue to look to Europe as a major trade partner.</p>
+<h2 id="governance"><a href="#governance" class="header-anchor">Governance</a></h2>
+<p>Because Concordia&#39;s state have diverse demographic and economic profiles, its constitution will have to strike a balance between democratic majority rule, which favors urban Massachusetts and Connecticut, and place-based autonomy. It should be cautious not to bake in geographic divisions in political power, however, so that as political and social differences and commonalities develop that power dynamic can adjust accordingly.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
