--- a/__site/cumber/index.html
+++ b/__site/cumber/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Cumberland</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -80,7 +81,7 @@
 </table>
 	
 
-<p>Tennessee has a population comparable to Massachusetts, and Kentucky has a population size between Louisiana and Oregon. to Indiana and Tennessee. West Virginia falls between Idaho and Oklahoma. A single state it would be the fifth largest behind New York and ahead of Pennsylvania. <img src="/img/cumber_at_night.png" alt="Cumberland at night" /></p>
+<p>Tennessee has a population comparable to Massachusetts, and Kentucky has a population size between Louisiana and Oregon. West Virginia falls between Idaho and Oklahoma. A single state Cumberland would be the fifth largest behind New York and ahead of Pennsylvania. <img src="/img/cumber_at_night.png" alt="Cumberland at night" /></p>
 <p>The following table shows the population of Cumberland in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -261,7 +262,7 @@
       <td style = "text-align: right;">-5,223</td>
       <td style = "text-align: right;">14,215</td>
       <td style = "text-align: right;">27,761</td>
-      <td style = "text-align: right;">41,976</td>
+      <td style = "text-align: right;">36,753</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Tennessee</td>
       <td style = "text-align: right;">82,973</td>
@@ -269,7 +270,7 @@
       <td style = "text-align: right;">-2,016</td>
       <td style = "text-align: right;">22,749</td>
       <td style = "text-align: right;">27,204</td>
-      <td style = "text-align: right;">49,953</td>
+      <td style = "text-align: right;">47,937</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">West Virginia</td>
       <td style = "text-align: right;">16,403</td>
@@ -277,7 +278,7 @@
       <td style = "text-align: right;">-11,104</td>
       <td style = "text-align: right;">978</td>
       <td style = "text-align: right;">3,573</td>
-      <td style = "text-align: right;">4,551</td>
+      <td style = "text-align: right;">-6,553</td>
     </tr>
     <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">151,206</td>
@@ -285,7 +286,7 @@
       <td style = "font-weight: bold; text-align: right;">-18,343</td>
       <td style = "font-weight: bold; text-align: right;">37,942</td>
       <td style = "font-weight: bold; text-align: right;">58,538</td>
-      <td style = "font-weight: bold; text-align: right;">96,480</td>
+      <td style = "font-weight: bold; text-align: right;">78,137</td>
     </tr>
   </tbody>
 </table>
@@ -404,7 +405,7 @@
 <p>In 2024, Tennessee goods exports were &#36;38.9 billion. The state&#39;s largest manufacturing export category is computer and electronic products, followed by  transportation equipment, chemicals, miscellaneous manufactured commodities and machinery.</p>
 <p>In 2024, West Virginia exported &#36;4.9 billion of goods to the world. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, primary metal manufacturing and petroleum and coal products.</p>
 <h3 id="agriculture"><a href="#agriculture" class="header-anchor">Agriculture</a></h3>
-<p>Kentucky produces soybeans, chicken, cattle, horses and corn. Tennessee production of agricultural commodities is smaller—none of its products is has as large a value as the Kentucky produce. The total value of all of West Virginia&#39;s crops is smaller than any of the leading crops of the other two states.</p>
+<p>Kentucky produces soybeans, chicken, cattle, horses and corn. Tennessee production of agricultural commodities is smaller—none of its products has as large a value as Kentucky products. The total value of all of West Virginia&#39;s crops is smaller than any of the leading crops of the other two states.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
 <p>West Virginia and Tennessee produce bituminous coal, and all three states produce natural gas.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
@@ -463,12 +464,14 @@
 <p>Politcal polarization of Cumberland, as measured by the margin between votes for the two major party political nominees, was 32.06% in the 2024 election. Politcal polarization of Cumberland, as measured by the margin between votes for the two major party political nominees, was 17.53% over the elections from 1968-2020.</p>	 
  Even should the recent narrowed difference between the two parties does not revert to the long-term mean, there appears to be a stable political majority for Cumberland.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<p>Cumberland is a hard case, beginning with West Virginia, which has a dying economic base &#40;coal&#41;, a poor road network, low educational attainment, a high dependency ratio, low birthrate and low immigration. None of the mountainous regions of Cumberland are suitable for industrial agriculture. Forestry resources are threatened by a combination of factors associated with climate change. These include drought, wildfires, flooding and invasive species. Climate change does provide a potential source of population growth, however, if effects on states to the north lead to immigration. This, however, will put a strain on infrastructure, including transportation, water supply and the electricity grid.</p>
+<p>Cumberland&#39;s governance framework lacks a concentrated political core. No metropolitan area dominates the region the way Boston commands Concordia. This may leave the region without a strong central authority able to handle common issues at scale. Cumberland will have little need for a global foreign policy due to its inland insulation. </p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 15, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
