--- a/__site/desert/index.html
+++ b/__site/desert/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Deseret</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -220,7 +221,6 @@
 	
 
 <p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
-<p><img src="/img/Deseret Age Pyramid.png" alt="Deseret regional age pyramid" /></p>
 <h2 id="birth_rates"><a href="#birth_rates" class="header-anchor">Birth Rates</a></h2>
 
 <table class="tufte-table">
@@ -285,7 +285,7 @@
       <td style = "text-align: right;">14,688</td>
       <td style = "text-align: right;">21,293</td>
       <td style = "text-align: right;">35,910</td>
-      <td style = "text-align: right;">57,203</td>
+      <td style = "text-align: right;">71,891</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Idaho</td>
       <td style = "text-align: right;">22,377</td>
@@ -293,7 +293,7 @@
       <td style = "text-align: right;">5,215</td>
       <td style = "text-align: right;">16,738</td>
       <td style = "text-align: right;">9,400</td>
-      <td style = "text-align: right;">26,138</td>
+      <td style = "text-align: right;">31,353</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Montana</td>
       <td style = "text-align: right;">11,069</td>
@@ -301,7 +301,7 @@
       <td style = "text-align: right;">-615</td>
       <td style = "text-align: right;">-47</td>
       <td style = "text-align: right;">2,597</td>
-      <td style = "text-align: right;">2,550</td>
+      <td style = "text-align: right;">1,935</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Utah</td>
       <td style = "text-align: right;">45,016</td>
@@ -309,7 +309,7 @@
       <td style = "text-align: right;">23,130</td>
       <td style = "text-align: right;">-3,486</td>
       <td style = "text-align: right;">27,776</td>
-      <td style = "text-align: right;">24,290</td>
+      <td style = "text-align: right;">47,420</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Wyoming</td>
       <td style = "text-align: right;">5,987</td>
@@ -317,7 +317,7 @@
       <td style = "text-align: right;">82</td>
       <td style = "text-align: right;">82</td>
       <td style = "text-align: right;">2,353</td>
-      <td style = "text-align: right;">2,435</td>
+      <td style = "text-align: right;">2,517</td>
     </tr>
     <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">145,924</td>
@@ -325,7 +325,7 @@
       <td style = "font-weight: bold; text-align: right;">42,500</td>
       <td style = "font-weight: bold; text-align: right;">34,580</td>
       <td style = "font-weight: bold; text-align: right;">78,036</td>
-      <td style = "font-weight: bold; text-align: right;">112,616</td>
+      <td style = "font-weight: bold; text-align: right;">155,116</td>
     </tr>
   </tbody>
 </table>
@@ -507,12 +507,13 @@
 <p>Politcal polarization of Deseret, as measured by the margin between votes for the two major party political nominees, was 8.67% in the 2024 election. Politcal polarization of Deseret, as measured by the margin between votes for the two major party political nominees, was 22.75% over the elections from 1968-2020.</p>	 
  Even should the recent marked difference between the two parties should revert to the long-term mean, there may be a stable political majority for Deseret.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<p>Climate change will challenge the states in Deseret as warmer winters result in less snowpack and reduced availability of water during the rest of the year because of the difficulty in capturing runoff. Idaho, Montana and Wyoming rely on immigration for growth while Colorado and Utah have sufficient natural growth that immigration is less urgent. As a landlocked nation, Deseret may have little need of a global foreign policy.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 15, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
