--- a/__site/factor/index.html
+++ b/__site/factor/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Factoria</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -226,7 +227,6 @@
 	
 
 <p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
-<p><img src="/img/Factoria Age Pyramid.png" alt="Factoria regional age pyramid" /></p>
 <h2 id="birth_rates"><a href="#birth_rates" class="header-anchor">Birth Rates</a></h2>
 
 <table class="tufte-table">
@@ -296,7 +296,7 @@
       <td style = "text-align: right;">1,780</td>
       <td style = "text-align: right;">-93,247</td>
       <td style = "text-align: right;">97,862</td>
-      <td style = "text-align: right;">4,615</td>
+      <td style = "text-align: right;">6,395</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Indiana</td>
       <td style = "text-align: right;">78,856</td>
@@ -304,7 +304,7 @@
       <td style = "text-align: right;">3,488</td>
       <td style = "text-align: right;">29,773</td>
       <td style = "text-align: right;">30,115</td>
-      <td style = "text-align: right;">59,888</td>
+      <td style = "text-align: right;">63,376</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Michigan</td>
       <td style = "text-align: right;">99,055</td>
@@ -312,7 +312,7 @@
       <td style = "text-align: right;">-11,444</td>
       <td style = "text-align: right;">-20,415</td>
       <td style = "text-align: right;">56,357</td>
-      <td style = "text-align: right;">35,942</td>
+      <td style = "text-align: right;">24,498</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Ohio</td>
       <td style = "text-align: right;">126,785</td>
@@ -320,7 +320,7 @@
       <td style = "text-align: right;">-11,424</td>
       <td style = "text-align: right;">1,060</td>
       <td style = "text-align: right;">56,978</td>
-      <td style = "text-align: right;">58,038</td>
+      <td style = "text-align: right;">46,614</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Pennsylvania</td>
       <td style = "text-align: right;">126,757</td>
@@ -328,7 +328,7 @@
       <td style = "text-align: right;">-20,424</td>
       <td style = "text-align: right;">-34,935</td>
       <td style = "text-align: right;">73,871</td>
-      <td style = "text-align: right;">38,936</td>
+      <td style = "text-align: right;">18,512</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Wisconsin</td>
       <td style = "text-align: right;">59,719</td>
@@ -336,7 +336,7 @@
       <td style = "text-align: right;">-871</td>
       <td style = "text-align: right;">14,853</td>
       <td style = "text-align: right;">20,895</td>
-      <td style = "text-align: right;">35,748</td>
+      <td style = "text-align: right;">34,877</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">615,915</td>
@@ -344,7 +344,7 @@
       <td style = "font-weight: bold; text-align: right;">-38,895</td>
       <td style = "font-weight: bold; text-align: right;">-102,911</td>
       <td style = "font-weight: bold; text-align: right;">336,078</td>
-      <td style = "font-weight: bold; text-align: right;">233,167</td>
+      <td style = "font-weight: bold; text-align: right;">194,272</td>
     </tr>
   </tbody>
 </table>
@@ -459,7 +459,7 @@
 <p>The Factoria states export &#36;286.4 in goods each year.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
 <div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/il">Illinois</a>, <a href="https://ustr.gov/map/state-benefits/mi">Michigan</a>, <a href="https://ustr.gov/map/state-benefits/oh">Ohio</a>, <a href="https://ustr.gov/map/state-benefits/in">Indiana</a>, <a href="https://ustr.gov/map/state-benefits/wi">Wisconsin</a></div>
-<p>In 2024, Illinois exported a record &#36;80.8 billion of goods to the world. In 2024, Illinois exported &#36;72.8 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals,followed by machinery,computer and electronic products, transportation equipment and food and kindred products.</p>
+<p>In 2024, Illinois exported &#36;80.8 billion of goods to the world. In 2024, Illinois exported &#36;72.8 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals,followed by machinery,computer and electronic products, transportation equipment and food and kindred products.</p>
 <p>In 2024, Michigan exported &#36;61.6 billion of goods to the world. In 2024, Michigan exported &#36;58.9 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by machinery, chemicals, electrical equipment, appliances and components and computer and electronic products.</p>
 <p>In 2024, Indiana exported a record &#36;59.9 billion of goods to the world. In 2024, Indiana exported &#36;59.0 billion of manufactured products. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, miscellaneous manufactured commodities and computer and electronic products.</p>
 <p>In 2024, Ohio exported &#36;56.6 billion of goods to the world. In 2024, Ohio exported &#36;52.8 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, machinery, fabricated metal products and primary metal manufacturing.</p>
@@ -525,13 +525,12 @@
 
 <p>Neither the current nor the historical electoral margins hold much promise of political stability.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
-<p></p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 15, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
