--- a/__site/lonestar/index.html
+++ b/__site/lonestar/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>The Lone Star Republic</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
