--- a/__site/metro/index.html
+++ b/__site/metro/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Metropolis</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -293,7 +294,7 @@
       <td style = "text-align: right;">-955</td>
       <td style = "text-align: right;">9,885</td>
       <td style = "text-align: right;">6,779</td>
-      <td style = "text-align: right;">16,664</td>
+      <td style = "text-align: right;">15,709</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Maryland</td>
       <td style = "text-align: right;">65,561</td>
@@ -301,7 +302,7 @@
       <td style = "text-align: right;">9,105</td>
       <td style = "text-align: right;">-36,090</td>
       <td style = "text-align: right;">46,472</td>
-      <td style = "text-align: right;">10,382</td>
+      <td style = "text-align: right;">19,487</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">New Jersey</td>
       <td style = "text-align: right;">100,943</td>
@@ -309,7 +310,7 @@
       <td style = "text-align: right;">19,453</td>
       <td style = "text-align: right;">-69,179</td>
       <td style = "text-align: right;">93,958</td>
-      <td style = "text-align: right;">24,779</td>
+      <td style = "text-align: right;">44,232</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">New York</td>
       <td style = "text-align: right;">203,126</td>
@@ -317,7 +318,7 @@
       <td style = "text-align: right;">29,182</td>
       <td style = "text-align: right;">-178,709</td>
       <td style = "text-align: right;">167,420</td>
-      <td style = "text-align: right;">-11,289</td>
+      <td style = "text-align: right;">17,893</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Virginia</td>
       <td style = "text-align: right;">92,512</td>
@@ -325,7 +326,7 @@
       <td style = "text-align: right;">9,577</td>
       <td style = "text-align: right;">22,921</td>
       <td style = "text-align: right;">58,033</td>
-      <td style = "text-align: right;">80,954</td>
+      <td style = "text-align: right;">90,531</td>
     </tr>
     <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">472,538</td>
@@ -333,7 +334,7 @@
       <td style = "font-weight: bold; text-align: right;">66,362</td>
       <td style = "font-weight: bold; text-align: right;">-251,172</td>
       <td style = "font-weight: bold; text-align: right;">372,662</td>
-      <td style = "font-weight: bold; text-align: right;">121,490</td>
+      <td style = "font-weight: bold; text-align: right;">187,852</td>
     </tr>
   </tbody>
 </table>
