--- a/__site/dixie/index.html
+++ b/__site/dixie/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>New Dixie</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -51,7 +52,7 @@
 	frameborder="0" 
 	scrolling="yes">
 </iframe>
- All of New Dixie lies within 400 miles of Alanta except for Florida south of Orlando and eastern North Carolina. Maine, which is sparsely settled. It is bordered by the Mississippi River on the west and Virginia and Tennessee on the north.</p>
+ All of New Dixie lies within 400 miles of Alanta except for Florida south of Orlando and eastern North Carolina. It is bordered by the Mississippi River on the west and Virginia and Tennessee on the north.</p>
 <h2 id="population"><a href="#population" class="header-anchor">Population</a></h2>
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
@@ -88,7 +89,7 @@
 </table>
 	
 
-<p>As a single state, it would be the largest by far with a population nearly more than twice that of California. Florida is already the third largest state, while Georgia and North Carolina rank seventh and eighth.</p>
+<p>As a single state, it would be the largest by far with a population nearly a quarter more than that of California. Florida is already the third largest state, while Georgia and North Carolina rank seventh and eighth.</p>
 <p><img src="/img/dixie_at_night.png" alt="New Dixie at night" /></p>
 <p>The following table shows the population of New Dixie in relation to the European Union member states.</p>
 
@@ -294,7 +295,7 @@
       <td style = "text-align: right;">-4,491</td>
       <td style = "text-align: right;">19,758</td>
       <td style = "text-align: right;">18,239</td>
-      <td style = "text-align: right;">37,997</td>
+      <td style = "text-align: right;">33,506</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Florida</td>
       <td style = "text-align: right;">221,365</td>
@@ -302,7 +303,7 @@
       <td style = "text-align: right;">-17,754</td>
       <td style = "text-align: right;">126,008</td>
       <td style = "text-align: right;">303,868</td>
-      <td style = "text-align: right;">429,876</td>
+      <td style = "text-align: right;">412,122</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Georgia</td>
       <td style = "text-align: right;">125,046</td>
@@ -310,7 +311,7 @@
       <td style = "text-align: right;">22,704</td>
       <td style = "text-align: right;">59,968</td>
       <td style = "text-align: right;">63,323</td>
-      <td style = "text-align: right;">123,291</td>
+      <td style = "text-align: right;">145,995</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Mississippi</td>
       <td style = "text-align: right;">34,449</td>
@@ -318,7 +319,7 @@
       <td style = "text-align: right;">-3,354</td>
       <td style = "text-align: right;">2,777</td>
       <td style = "text-align: right;">10,307</td>
-      <td style = "text-align: right;">13,084</td>
+      <td style = "text-align: right;">9,730</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">North Carolina</td>
       <td style = "text-align: right;">119,744</td>
@@ -326,7 +327,7 @@
       <td style = "text-align: right;">6,821</td>
       <td style = "text-align: right;">106,592</td>
       <td style = "text-align: right;">64,940</td>
-      <td style = "text-align: right;">171,532</td>
+      <td style = "text-align: right;">178,353</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">South Carolina</td>
       <td style = "text-align: right;">57,688</td>
@@ -334,7 +335,7 @@
       <td style = "text-align: right;">-3,364</td>
       <td style = "text-align: right;">68,667</td>
       <td style = "text-align: right;">26,113</td>
-      <td style = "text-align: right;">94,780</td>
+      <td style = "text-align: right;">91,416</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">616,095</td>
@@ -342,7 +343,7 @@
       <td style = "font-weight: bold; text-align: right;">562</td>
       <td style = "font-weight: bold; text-align: right;">383,770</td>
       <td style = "font-weight: bold; text-align: right;">486,790</td>
-      <td style = "font-weight: bold; text-align: right;">870,560</td>
+      <td style = "font-weight: bold; text-align: right;">871,122</td>
     </tr>
   </tbody>
 </table>
@@ -525,12 +526,13 @@
 <p>Politcal polarization of New Dixie, as measured by the margin between votes for the two major party political nominees, was 11.43% in the 2024 election. Politcal polarization of New Dixie, as measured by the margin between votes for the two major party political nominees, was 11.17% over the elections from 1968-2020.</p>	 
  The recent and historical margins for New Dixie show a consistent political majority.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<p>With its long shoreline of low-lying areas, New Dixie will be affected by sea level rise as well as hotter temperatures, droughts and extreme weather events. Alabama, Mississippi, Florida and South Carolina rely entirely on immigration for population growth, and only Georgia has a substantial excess of births over deaths. New Dixie&#39;s global foreign policy will be oriented toward the Caribbean and South America. </p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 15, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
