--- a/__site/heart/index.html
+++ b/__site/heart/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Heartlandia</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -301,7 +302,7 @@
       <td style = "text-align: right;">2,021</td>
       <td style = "text-align: right;">-1,856</td>
       <td style = "text-align: right;">17,122</td>
-      <td style = "text-align: right;">15,266</td>
+      <td style = "text-align: right;">17,287</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Kansas</td>
       <td style = "text-align: right;">34,056</td>
@@ -309,7 +310,7 @@
       <td style = "text-align: right;">2,505</td>
       <td style = "text-align: right;">-15,575</td>
       <td style = "text-align: right;">21,062</td>
-      <td style = "text-align: right;">5,487</td>
+      <td style = "text-align: right;">7,992</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Minnesota</td>
       <td style = "text-align: right;">61,671</td>
@@ -317,7 +318,7 @@
       <td style = "text-align: right;">10,449</td>
       <td style = "text-align: right;">-8,689</td>
       <td style = "text-align: right;">30,830</td>
-      <td style = "text-align: right;">22,141</td>
+      <td style = "text-align: right;">32,590</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Missouri</td>
       <td style = "text-align: right;">67,058</td>
@@ -325,7 +326,7 @@
       <td style = "text-align: right;">-4,793</td>
       <td style = "text-align: right;">8,091</td>
       <td style = "text-align: right;">23,901</td>
-      <td style = "text-align: right;">31,992</td>
+      <td style = "text-align: right;">27,199</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Nebraska</td>
       <td style = "text-align: right;">24,043</td>
@@ -333,7 +334,7 @@
       <td style = "text-align: right;">5,428</td>
       <td style = "text-align: right;">-69</td>
       <td style = "text-align: right;">12,907</td>
-      <td style = "text-align: right;">12,838</td>
+      <td style = "text-align: right;">18,266</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">North Dakota</td>
       <td style = "text-align: right;">9,614</td>
@@ -341,7 +342,7 @@
       <td style = "text-align: right;">2,573</td>
       <td style = "text-align: right;">13,601</td>
       <td style = "text-align: right;">7,113</td>
-      <td style = "text-align: right;">20,714</td>
+      <td style = "text-align: right;">23,287</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">South Dakota</td>
       <td style = "text-align: right;">11,198</td>
@@ -349,7 +350,7 @@
       <td style = "text-align: right;">2,182</td>
       <td style = "text-align: right;">591</td>
       <td style = "text-align: right;">2,172</td>
-      <td style = "text-align: right;">2,763</td>
+      <td style = "text-align: right;">4,945</td>
     </tr>
     <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">243,634</td>
@@ -357,7 +358,7 @@
       <td style = "font-weight: bold; text-align: right;">20,365</td>
       <td style = "font-weight: bold; text-align: right;">-3,906</td>
       <td style = "font-weight: bold; text-align: right;">115,107</td>
-      <td style = "font-weight: bold; text-align: right;">111,201</td>
+      <td style = "font-weight: bold; text-align: right;">131,566</td>
     </tr>
   </tbody>
 </table>
