--- a/__site/pacific/index.html
+++ b/__site/pacific/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Pacifica</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -260,7 +261,7 @@
       <td style = "text-align: right;">3,195</td>
       <td style = "text-align: right;">-5,124</td>
       <td style = "text-align: right;">5,051</td>
-      <td style = "text-align: right;">-73</td>
+      <td style = "text-align: right;">3,122</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Oregon</td>
       <td style = "text-align: right;">38,225</td>
@@ -268,7 +269,7 @@
       <td style = "text-align: right;">-6,373</td>
       <td style = "text-align: right;">-6,157</td>
       <td style = "text-align: right;">24,248</td>
-      <td style = "text-align: right;">18,091</td>
+      <td style = "text-align: right;">11,718</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Washington</td>
       <td style = "text-align: right;">80,879</td>
@@ -276,7 +277,7 @@
       <td style = "text-align: right;">11,685</td>
       <td style = "text-align: right;">-2,661</td>
       <td style = "text-align: right;">69,614</td>
-      <td style = "text-align: right;">66,953</td>
+      <td style = "text-align: right;">78,638</td>
     </tr>
     <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">128,018</td>
@@ -284,7 +285,7 @@
       <td style = "font-weight: bold; text-align: right;">8,507</td>
       <td style = "font-weight: bold; text-align: right;">-13,942</td>
       <td style = "font-weight: bold; text-align: right;">98,913</td>
-      <td style = "font-weight: bold; text-align: right;">84,971</td>
+      <td style = "font-weight: bold; text-align: right;">93,478</td>
     </tr>
   </tbody>
 </table>
