--- a/__site/sonora/index.html
+++ b/__site/sonora/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>New Sonora</title>  
+   <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/common/">Commonalities</a></li>
       <li><a href="/concord/">Concordia</a></li>
       <li><a href="/metro/">Metropolis</a></li>
       <li><a href="/factor/">Factoria</a></li>
@@ -283,7 +284,7 @@
       <td style = "text-align: right;">3,994</td>
       <td style = "text-align: right;">62,533</td>
       <td style = "text-align: right;">58,640</td>
-      <td style = "text-align: right;">121,173</td>
+      <td style = "text-align: right;">125,167</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">California</td>
       <td style = "text-align: right;">399,368</td>
@@ -291,7 +292,7 @@
       <td style = "text-align: right;">86,207</td>
       <td style = "text-align: right;">-268,052</td>
       <td style = "text-align: right;">315,732</td>
-      <td style = "text-align: right;">47,680</td>
+      <td style = "text-align: right;">133,887</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Hawaii</td>
       <td style = "text-align: right;">14,643</td>
@@ -299,7 +300,7 @@
       <td style = "text-align: right;">1,415</td>
       <td style = "text-align: right;">461</td>
       <td style = "text-align: right;">13,608</td>
-      <td style = "text-align: right;">14,069</td>
+      <td style = "text-align: right;">15,484</td>
     </tr>
     <tr class="tufte-table tr"><td style = "text-align: left;">Nevada</td>
       <td style = "text-align: right;">31,759</td>
@@ -307,7 +308,7 @@
       <td style = "text-align: right;">799</td>
       <td style = "text-align: right;">17,775</td>
       <td style = "text-align: right;">29,035</td>
-      <td style = "text-align: right;">46,810</td>
+      <td style = "text-align: right;">47,609</td>
     </tr>
     <tr class="tufte-table tr odd-row"><td style = "text-align: left;">New Mexico</td>
       <td style = "text-align: right;">20,815</td>
@@ -315,7 +316,7 @@
       <td style = "text-align: right;">-2,840</td>
       <td style = "text-align: right;">-244</td>
       <td style = "text-align: right;">12,733</td>
-      <td style = "text-align: right;">12,489</td>
+      <td style = "text-align: right;">9,649</td>
     </tr>
     <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Total</td>
       <td style = "font-weight: bold; text-align: right;">544,661</td>
@@ -323,7 +324,7 @@
       <td style = "font-weight: bold; text-align: right;">89,575</td>
       <td style = "font-weight: bold; text-align: right;">-187,527</td>
       <td style = "font-weight: bold; text-align: right;">429,748</td>
-      <td style = "font-weight: bold; text-align: right;">242,221</td>
+      <td style = "font-weight: bold; text-align: right;">331,796</td>
     </tr>
   </tbody>
 </table>
